time picker has been set

--- a/app/src/main/res/drawable/ic_hospitals.xml
+++ b/app/src/main/res/drawable/ic_hospitals.xml
@@ -1,14 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="70dp"
+    android:height="45dp"
+    android:viewportWidth="1200"
+    android:viewportHeight="800">
 
     <path
-        android:pathData="M0 0h24v24H0z" />
+        android:fillColor="#030303"
+        android:pathData="M811.7,298.6H724v-21.4c0-26.5-21.6-48.1-48.1-48.1h-70.2c-26.5,0-48.1,21.6-48.1,48.1v21.4h-87.7
+c-18.7,0-33.9,15.2-33.9,33.9v205.9c0,18.7,15.2,33.9,33.9,33.9h341.8c18.7,0,33.9-15.2,33.9-33.9V332.5
+C845.6,313.8,830.4,298.6,811.7,298.6L811.7,298.6z
+M573.9,277.1c0-17.5,14.3-31.8,31.8-31.8h70.2c17.5,0,31.8,14.3,31.8,31.8
+v21.4H573.9V277.1z
+M829.3,538.4c0,9.7-7.9,17.6-17.6,17.6H469.9c-9.7,0-17.6-7.9-17.6-17.6V332.5c0-9.7,7.9-17.6,17.6-17.6h341.8
+c9.7,0,17.6,7.9,17.6,17.6V538.4z M829.3,538.4" />
     <path
-        android:fillColor="#e13944"
-        android:pathData="M19 3H5c-1.1 0-1.99 .9 -1.99 2L3 19c0 1.1 .9 2 2 2h14c1.1 0 2-.9
-2-2V5c0-1.1-.9-2-2-2zm-1 11h-4v4h-4v-4H6v-4h4V6h4v4h4v4z" />
+        android:fillColor="#030303"
+        android:pathData="M811.7,572.8H469.9c-19,0-34.4-15.4-34.4-34.4V332.5c0-19,15.4-34.4,34.4-34.4h87.2v-20.9
+c0-26.8,21.8-48.6,48.6-48.6h70.2c26.8,0,48.6,21.8,48.6,48.6v20.9h87.2c9.2,0,17.8,3.6,24.3,10.1c6.5,6.5,10.1,15.1,10.1,24.3
+v205.9C846.1,557.3,830.7,572.8,811.7,572.8z
+M469.9,299.1c-18.4,0-33.4,15-33.4,33.4v205.9c0,18.4,15,33.4,33.4,33.4h341.8
+c18.4,0,33.4-15,33.4-33.4V332.5c0-8.9-3.5-17.3-9.8-23.6c-6.3-6.3-14.7-9.8-23.6-9.8h-88.2v-21.9c0-26.3-21.4-47.6-47.6-47.6
+h-70.2c-26.3,0-47.6,21.4-47.6,47.6v21.9H469.9z
+M811.7,556.5H469.9c-10,0-18.1-8.1-18.1-18.1V332.5c0-10,8.1-18.1,18.1-18.1
+h341.8c10,0,18.1,8.1,18.1,18.1v205.9C829.8,548.4,821.7,556.5,811.7,556.5z
+M469.9,315.4c-9.4,0-17.1,7.7-17.1,17.1v205.9
+c0,9.4,7.7,17.1,17.1,17.1h341.8c9.4,0,17.1-7.7,17.1-17.1V332.5c0-9.4-7.7-17.1-17.1-17.1H469.9z
+M708.2,299.1H573.4v-21.9
+c0-17.8,14.5-32.3,32.3-32.3h70.2c17.8,0,32.3,14.5,32.3,32.3V299.1z
+M574.4,298.1h132.8v-20.9c0-17.3-14-31.3-31.3-31.3h-70.2
+c-17.3,0-31.3,14.1-31.3,31.3V298.1z" />
+    <path
+        android:fillColor="#030303"
+        android:pathData="M731.4,396.8h-50.8V346c0-4.5-3.7-8.2-8.2-8.2h-63.1c-4.5,0-8.2,3.7-8.2,8.2v50.8h-50.8
+c-4.5,0-8.2,3.7-8.2,8.2v63.1c0,4.5,3.7,8.2,8.2,8.2h50.8v50.8c0,4.5,3.7,8.2,8.2,8.2h63.1c4.5,0,8.2-3.7,8.2-8.2v-50.8h50.8
+c4.5,0,8.2-3.7,8.2-8.2V405C739.5,400.5,735.9,396.8,731.4,396.8L731.4,396.8z
+M723.2,459.9h-50.8c-4.5,0-8.2,3.7-8.2,8.2v50.8
+h-46.8v-50.8c0-4.5-3.7-8.2-8.2-8.2h-50.8v-46.8h50.8c4.5,0,8.2-3.7,8.2-8.2v-50.8h46.8V405c0,4.5,3.7,8.2,8.2,8.2h50.8V459.9z
+M723.2,459.9" />
+    <path
+        android:fillColor="#030303"
+        android:pathData="M672.4,535.8h-63.1c-4.8,0-8.7-3.9-8.7-8.7v-50.3h-50.3c-4.8,0-8.7-3.9-8.7-8.7V405c0-4.8,3.9-8.7,8.7-8.7
+h50.3V346c0-4.8,3.9-8.7,8.7-8.7h63.1c4.8,0,8.7,3.9,8.7,8.7v50.3h50.3c4.8,0,8.7,3.9,8.7,8.7v63.1c0,4.8-3.9,8.7-8.7,8.7H681
+v50.3C681,531.9,677.1,535.8,672.4,535.8z
+M550.2,397.3c-4.2,0-7.7,3.4-7.7,7.7v63.1c0,4.2,3.4,7.7,7.7,7.7h51.3v51.3
+c0,4.2,3.4,7.7,7.7,7.7h63.1c4.2,0,7.7-3.4,7.7-7.7v-51.3h51.3c4.2,0,7.7-3.4,7.7-7.7V405c0-4.2-3.4-7.7-7.7-7.7H680V346
+c0-4.2-3.4-7.7-7.7-7.7h-63.1c-4.2,0-7.7,3.4-7.7,7.7v51.3H550.2z
+M664.7,519.4h-47.8v-51.3c0-4.2-3.4-7.7-7.7-7.7h-51.3v-47.8
+h51.3c4.2,0,7.7-3.4,7.7-7.7v-51.3h47.8V405c0,4.2,3.4,7.7,7.7,7.7h51.3v47.8h-51.3c-4.2,0-7.7,3.4-7.7,7.7V519.4z
+M617.9,518.4
+h45.8v-50.3c0-4.8,3.9-8.7,8.7-8.7h50.3v-45.8h-50.3c-4.8,0-8.7-3.9-8.7-8.7v-50.3h-45.8V405c0,4.8-3.9,8.7-8.7,8.7h-50.3v45.8
+h50.3c4.8,0,8.7,3.9,8.7,8.7V518.4z" />
+    <path
+        android:fillColor="#030303"
+        android:pathData="M563.3,325.6h-57.1c-4.5,0-8.2,3.7-8.2,8.2c0,4.5,3.7,8.2,8.2,8.2h57.1c4.5,0,8.2-3.7,8.2-8.2
+C571.4,329.2,567.8,325.6,563.3,325.6L563.3,325.6z M563.3,325.6" />
+    <path
+        android:fillColor="#030303"
+        android:pathData="M563.3,342.4h-57.1c-4.8,0-8.7-3.9-8.7-8.7c0-4.8,3.9-8.7,8.7-8.7h57.1c4.8,0,8.7,3.9,8.7,8.7
+C571.9,338.5,568.1,342.4,563.3,342.4z
+M506.2,326.1c-4.2,0-7.7,3.4-7.7,7.7c0,4.2,3.4,7.7,7.7,7.7h57.1c4.2,0,7.7-3.4,7.7-7.7
+c0-4.2-3.4-7.7-7.7-7.7H506.2z" />
+    <path
+        android:fillColor="#030303"
+        android:pathData="M477.6,325.6h-4.1c-4.5,0-8.2,3.7-8.2,8.2c0,4.5,3.7,8.2,8.2,8.2h4.1c4.5,0,8.2-3.7,8.2-8.2
+C485.8,329.2,482.1,325.6,477.6,325.6L477.6,325.6z M477.6,325.6" />
+    <path
+        android:fillColor="#030303"
+        android:pathData="M477.6,342.4h-4.1c-4.8,0-8.7-3.9-8.7-8.7c0-4.8,3.9-8.7,8.7-8.7h4.1c4.8,0,8.7,3.9,8.7,8.7
+C486.3,338.5,482.4,342.4,477.6,342.4z
+M473.5,326.1c-4.2,0-7.7,3.4-7.7,7.7c0,4.2,3.4,7.7,7.7,7.7h4.1c4.2,0,7.7-3.4,7.7-7.7
+c0-4.2-3.4-7.7-7.7-7.7H473.5z" />
 </vector>
