--- a/app/src/main/res/drawable/ic_local_hotels.xml
+++ b/app/src/main/res/drawable/ic_local_hotels.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-
-    <path
-        android:pathData="M0 0h24v24H0z" />
-    <path
-        android:fillColor="#004D40"
-        android:pathData="M7 13c1.66 0 3-1.34 3-3S8.66 7 7 7s-3 1.34-3 3 1.34 3 3
-3zm12-6h-8v7H3V5H1v15h2v-3h18v3h2v-9c0-2.21-1.79-4-4-4z" />
+    android:viewportWidth="1280"
+    android:viewportHeight="800"
+    android:width="60dp"
+    android:height="35dp">
+    <group
+        android:translateX="450"
+        android:translateY="-11">
+        <path
+            android:pathData="M402.9 204.4l-391.8 0c-33.2 0 -60.1 27 -60.1 60.1l0 188.6 0 71.6 0 51.7c0 7.4 6 13.3 13.3 13.3 7.3 0 13.3 -6 13.3 -13.3l0 -38.4 458.7 0 0 38.3c0 7.4 6 13.3 13.3 13.3 7.4 0 13.3 -6 13.3 -13.3l0 -51.7 0 -71.6 0 -188.5C463 231.3 436 204.4 402.9 204.4ZM11.1 231l391.7 0c18.5 0 33.5 15 33.5 33.5l0 98.4c-14.5 -13.3 -33.9 -21.4 -55.1 -21.4l-8.5 0 0 -28.6c0 -19.8 -16.1 -36 -36 -36l-107 0c-8.6 0 -16.5 3 -22.7 8.1 -6.2 -5 -14.1 -8.1 -22.7 -8.1l-107.1 0c-19.8 0 -36 16.1 -36 36l0 28.6 -8.5 0c-21.2 0 -40.6 8.1 -55.1 21.4l0 -98.4C-22.3 246 -7.3 231 11.1 231Zm56.8 110.5l0 -28.6c0 -5.1 4.2 -9.3 9.3 -9.3l107.1 0c5.1 0 9.3 4.2 9.3 9.3l0 28.6 -125.7 0 0 0zm152.4 -28.6c0 -5.1 4.2 -9.3 9.3 -9.3l107.1 0c5.1 0 9.3 4.2 9.3 9.3l0 28.6 -125.7 0 0 -28.6 0 0zm-242.6 153.5l25.8 0c7.4 0 13.3 -6 13.3 -13.3 0 -7.4 -6 -13.3 -13.3 -13.3l-25.8 0 0 -16.5c0 -30.4 24.7 -55.1 55.1 -55.1l21.8 0 152.4 0 152.4 0 21.8 0c30.4 0 55.1 24.7 55.1 55.1l0 16.5 -340 0c-7.4 0 -13.3 6 -13.3 13.3 0 7.4 6 13.3 13.3 13.3l340 0 0 44.9 -458.6 0 0 -44.9z"
+            android:fillColor="#282828" />
+    </group>
 </vector>
