--- a/app/src/main/res/drawable/ic_tourist_spots.xml
+++ b/app/src/main/res/drawable/ic_tourist_spots.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-
+    android:viewportWidth="1280"
+    android:viewportHeight="800"
+    android:width="70dp"
+    android:height="45dp">
     <path
-        android:fillColor="#aa4dd9"
-        android:pathData="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1 .9 -2
-2-2s2 .9 2 2-.89 2-2 2c-1.1 0-2-.9-2-2zM5 20v2h14v-2H5z" />
+        android:pathData="M709.4 466.6C753 398.2 747.5 406.7 748.8 405 764.7 382.6 773.1 356.3 773.1 328.8 773 256 713.9 196 641 196c-72.7 0 -132 59.9 -132 132.8 0 27.4 8.6 54.5 25 77.2l38.7 60.7c-41.3 6.4 -111.6 25.3 -111.6 67 0 15.2 9.9 36.9 57.2 53.7 33 11.8 76.6 18.3 122.8 18.3 86.4 0 180 -24.4 180 -72C821 491.9 750.8 473 709.4 466.6l0 0zM554 392.8c-0.1 -0.2 -0.3 -0.4 -0.4 -0.6 -13.6 -18.8 -20.6 -41 -20.6 -63.3 0 -60 48.3 -108.8 108 -108.8 59.6 0 108 48.8 108 108.8 0 22.4 -6.8 43.9 -19.7 62.1 -1.2 1.5 4.9 -7.8 -88.3 138.3L554 392.8Zm87 188.8c-94.4 0 -156 -27.7 -156 -48 0 -13.6 31.7 -36 101.8 -44.7l44.1 69.2c2.2 3.5 6 5.6 10.1 5.6 4.1 0 7.9 -2.1 10.1 -5.6l44.1 -69.2c70.1 8.7 101.8 31.1 101.8 44.7 0 20.1 -61.1 48 -156 48l0 0zm0 0"
+        android:fillColor="#282828" />
     <path
-        android:pathData="M0 0h24v24H0z" />
+        android:pathData="M641 268.8c-33.1 0 -60 26.9 -60 60 0 33.1 26.9 60 60 60 33.1 0 60 -26.9 60 -60 0 -33.1 -26.9 -60 -60 -60l0 0zm0 96c-19.9 0 -36 -16.1 -36 -36 0 -19.9 16.1 -36 36 -36 19.9 0 36 16.1 36 36 0 19.9 -16.1 36 -36 36l0 0zm0 0"
+        android:fillColor="#282828" />
 </vector>
