--- a/app/src/main/res/drawable/ic_gas_pumps.xml
+++ b/app/src/main/res/drawable/ic_gas_pumps.xml
@@ -1,18 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-
+    android:viewportWidth="1280"
+    android:viewportHeight="800"
+    android:width="70dp"
+    android:height="45dp">
     <path
-        android:pathData="M0 0h24v24H0z" />
+        android:pathData="M512.8 371.3l192 0c4.4 0 8 -3.6 8 -8l0 -96c0 -4.4 -3.6 -8 -8 -8l-192 0c-4.4 0 -8 3.6 -8 8l0 96c0 4.4 3.6 8 8 8l0 0zm40.6 -16c1.4 -9.5 5.1 -18.2 10.6 -25.5l25.5 25.5 -36.1 0zm58.7 0l-36.8 -36.8c9.4 -7 21 -11.2 33.5 -11.2 28.2 0 51.5 20.9 55.4 48l-52.1 0zm-91.3 -80l176 0 0 80 -16.4 0c-4 -36 -34.6 -64 -71.6 -64 -17 0 -32.6 5.9 -44.9 15.8l-8.3 -8.3c-3.1 -3.1 -8.2 -3.1 -11.3 0 -3.1 3.1 -3.1 8.2 0 11.3l8.3 8.3c-8.3 10.4 -13.8 23 -15.3 36.9l-16.4 0 0 -80zm0 0"
+        android:fillColor="#282828" />
     <path
-        android:fillColor="#25b8d2"
-        android:pathData="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94 .36 -1.61 1.26-1.61 2.33 0
-1.38 1.12 2.5 2.5 2.5 .36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1
-1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2
-2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12
-2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1
-1 .45 1 1-.45 1-1 1z" />
+        android:pathData="M704.8 371.6l-192 0c-4.5 0 -8.3 -3.7 -8.3 -8.3l0 -96c0 -4.5 3.7 -8.3 8.3 -8.3l192 0c4.5 0 8.3 3.7 8.3 8.3l0 96c0 4.6 -3.8 8.3 -8.3 8.3zm-192 -112c-4.3 0 -7.8 3.5 -7.8 7.8l0 96c0 4.3 3.5 7.8 7.8 7.8l192 0c4.3 0 7.8 -3.5 7.8 -7.8l0 -96c0 -4.3 -3.5 -7.8 -7.8 -7.8l-192 0zm184.3 96l-16.9 0 0 -0.2c-4 -36.4 -34.7 -63.8 -71.3 -63.8 -16.2 0 -32.1 5.6 -44.8 15.7l-0.2 0.1 -8.4 -8.4c-1.5 -1.5 -3.4 -2.3 -5.5 -2.3 -2.1 0 -4 0.8 -5.5 2.3 -1.5 1.5 -2.3 3.4 -2.3 5.5 0 2.1 0.8 4 2.3 5.5l8.4 8.4 -0.1 0.2c-8.5 10.6 -13.8 23.3 -15.3 36.8l0 0.2 -16.9 0 0 -80.5 176.5 0 0 80.5zm-16.5 -0.5l16 0 0 -79.5 -175.5 0 0 79.5 16 0c1.5 -13.4 6.8 -26.1 15.2 -36.6l-8.1 -8.1c-3.2 -3.2 -3.2 -8.5 0 -11.7 3.2 -3.2 8.4 -3.2 11.7 0l8.1 8.1c12.7 -10.1 28.7 -15.7 44.9 -15.7 17.9 0 35 6.6 48.3 18.6 13.1 11.8 21.4 27.9 23.4 45.4zm-16.1 0.5l-52.5 0 -37.1 -37.1 0.2 -0.2c9.8 -7.3 21.4 -11.2 33.7 -11.2 27.8 0 51.7 20.7 55.7 48.2l0 0.3zm-52.3 -0.5l51.7 0c-4 -27.1 -27.7 -47.5 -55.1 -47.5 -12 0 -23.5 3.8 -33.1 10.9l36.5 36.6zm-22.1 0.5l-37 0 0 -0.3c1.3 -9.3 5 -18.1 10.6 -25.6l0.2 -0.2 26.2 26.1zm-36.4 -0.5l35.2 0 -24.9 -24.9c-5.4 7.3 -9 15.9 -10.3 24.9z"
+        android:fillColor="#282828" />
+    <path
+        android:pathData="M784.8 259.3l-16 0c0 0 0 0 0 0 0 0 0 0 0 0l-24 0 0 -40c0 -13.2 -10.8 -24 -24 -24l-224 0c-13.2 0 -24 10.8 -24 24l0 339c-9.3 3.3 -16 12.2 -16 22.6l0 16c0 4.4 3.6 8 8 8l288 0c4.4 0 8 -3.6 8 -8l0 -16c0 -10.4 -6.7 -19.3 -16 -22.6l0 -147 12 0c6.6 0 12 5.4 12 12l0 60c0 15.4 12.6 28 28 28 15.4 0 28 -12.6 28 -28l0 -184c0 -22 -17.9 -40 -40 -40l0 0zm-288 -48l224 0c4.4 0 8 3.6 8 8l0 337.6 -240 0 0 -337.6c0 -4.4 3.6 -8 8 -8l0 0zm-24 377.6l0 -8c0 -4.4 3.6 -8 8 -8l256 0c4.4 0 8 3.6 8 8l0 8 -272 0zm336 -105.6c0 6.6 -5.4 12 -12 12 -6.6 0 -12 -5.4 -12 -12l0 -60c0 -15.4 -12.6 -28 -28 -28l-12 0 0 -120 16 0 0 56c0 22.1 17.9 40 40 40l8 0 0 112zm0 -128l-8 0c-13.2 0 -24 -10.8 -24 -24l0 -56 8 0c13.2 0 24 10.8 24 24l0 56zm0 0"
+        android:fillColor="#282828" />
+    <path
+        android:pathData="M752.8 605.2l-288 0c-4.5 0 -8.3 -3.7 -8.3 -8.3l0 -16c0 -10.2 6.4 -19.3 16 -22.8l0 -338.8c0 -13.4 10.9 -24.3 24.3 -24.3l224 0c13.4 0 24.3 10.9 24.3 24.3l0 39.8 39.8 0c22.2 0 40.3 18.1 40.3 40.3l0 184c0 15.6 -12.7 28.3 -28.3 28.3 -15.6 0 -28.3 -12.7 -28.3 -28.3l0 -60c0 -6.5 -5.3 -11.8 -11.8 -11.8l-11.8 0 0 146.6c9.6 3.5 16 12.6 16 22.8l0 16c0.1 4.5 -3.7 8.2 -8.2 8.2zm-256 -409.6c-13.1 0 -23.8 10.7 -23.8 23.8l0 339.2 -0.2 0.1c-9.5 3.4 -15.8 12.4 -15.8 22.4l0 16c0 4.3 3.5 7.8 7.8 7.8l288 0c4.3 0 7.8 -3.5 7.8 -7.8l0 -16c0 -10 -6.4 -19 -15.8 -22.4l-0.2 -0.1 0 -147.5 12.3 0c6.8 0 12.3 5.5 12.3 12.3l0 60c0 15.3 12.4 27.8 27.8 27.8 15.4 0 27.8 -12.4 27.8 -27.8l0 -184c0 -21.9 -17.8 -39.8 -39.8 -39.8l-40.3 0 0 -40.3c0 -13.1 -10.7 -23.8 -23.8 -23.8l-224.1 0zm248.3 393.6l-272.5 0 0 -8.3c0 -4.5 3.7 -8.3 8.3 -8.3l256 0c4.5 0 8.3 3.7 8.3 8.3l0 8.3zm-272 -0.5l271.5 0 0 -7.8c0 -4.3 -3.5 -7.8 -7.8 -7.8l-256 0c-4.3 0 -7.8 3.5 -7.8 7.8l0 7.8zm256 -31.5l-240.5 0 0 -337.9c0 -4.5 3.7 -8.3 8.3 -8.3l224 0c4.5 0 8.3 3.7 8.3 8.3l0 337.9zm-240 -0.5l239.5 0 0 -337.4c0 -4.3 -3.5 -7.8 -7.8 -7.8l-224 0c-4.3 0 -7.8 3.5 -7.8 7.8l0 337.4zm307.7 -61.1c-6.8 0 -12.3 -5.5 -12.3 -12.3l0 -60c0 -15.3 -12.4 -27.8 -27.8 -27.8l-12.3 0 0 -120.4 16.5 0 0 56.3c0 21.9 17.8 39.7 39.8 39.8l8.3 0 0 112.3c0.1 6.6 -5.4 12.1 -12.2 12.1zm-51.7 -100.5l11.8 0c15.6 0 28.3 12.7 28.3 28.3l0 60c0 6.5 5.3 11.8 11.8 11.8 6.5 0 11.8 -5.3 11.8 -11.8l0 -111.8 -7.8 0c-22.2 0 -40.3 -18.1 -40.3 -40.3l0 -55.8 -15.5 0 0 119.6zm64 -39.5l-8.3 0c-13.4 0 -24.3 -10.9 -24.3 -24.2l0 -56.3 8.3 0c13.4 0 24.3 10.9 24.3 24.3l0 56.2zm-32 -80l0 55.8c0 13.1 10.7 23.7 23.8 23.7l7.8 0 0 -55.8c0 -13.1 -10.7 -23.8 -23.8 -23.8l-7.8 0z"
+        android:fillColor="#282828" />
+    <path
+        android:pathData="M631.4 430.5l-17 -17c-3.1 -3.1 -8.2 -3.1 -11.3 0l-17 17c-6 6 -9.4 14.1 -9.4 22.6 0 8.5 3.3 16.6 9.4 22.6 6 6 14.1 9.4 22.6 9.4 8.5 0 16.6 -3.3 22.6 -9.4 12.6 -12.5 12.6 -32.8 0.1 -45.2l0 0zm-11.3 33.9c-3 3 -7 4.7 -11.3 4.7 -4.3 0 -8.3 -1.7 -11.3 -4.7 -3 -3 -4.7 -7 -4.7 -11.3 0 -4.3 1.7 -8.3 4.7 -11.3l11.3 -11.3 11.3 11.3c6.3 6.2 6.3 16.4 0 22.6l0 0zm0 0"
+        android:fillColor="#282828" />
+    <path
+        android:pathData="M608.8 485.3c-8.6 0 -16.7 -3.4 -22.8 -9.4 -6.1 -6.1 -9.4 -14.2 -9.4 -22.8 0 -8.6 3.4 -16.7 9.4 -22.8l17 -17c3.2 -3.2 8.4 -3.2 11.7 0l17 17c12.6 12.6 12.6 33 0 45.6 -6.2 6.1 -14.3 9.4 -22.9 9.4zm0 -73.9c-2 0 -4 0.8 -5.5 2.3l-17 17c-6 6 -9.3 14 -9.3 22.5 0 8.5 3.3 16.5 9.3 22.5 6 6 14 9.3 22.5 9.3 8.5 0 16.5 -3.3 22.5 -9.3 12.4 -12.4 12.4 -32.5 0 -44.9l-17 -17c-1.5 -1.6 -3.5 -2.4 -5.5 -2.4zm0 57.9c-4.3 0 -8.4 -1.7 -11.5 -4.8 -3.1 -3.1 -4.8 -7.2 -4.8 -11.5 0 -4.3 1.7 -8.4 4.8 -11.5l11.5 -11.5 11.5 11.5c6.3 6.3 6.3 16.6 0 23l0 0c-3.1 3.1 -7.2 4.8 -11.5 4.8zm0 -38.5l-11.1 11.2c-3 3 -4.6 6.9 -4.6 11.1 0 4.2 1.6 8.2 4.6 11.1 3 3 6.9 4.6 11.1 4.6 4.2 0 8.2 -1.6 11.1 -4.6 6.1 -6.1 6.1 -16.1 0 -22.3l-11.1 -11.1z"
+        android:fillColor="#282828" />
+    <path
+        android:pathData="M576.6 243.3l0.2 0c4.4 0 8 -3.6 8 -8 0 -4.4 -3.6 -8 -8 -8l-0.2 0c-4.4 0 -8 3.6 -8 8 0 4.4 3.6 8 8 8l0 0zm0 0"
+        android:fillColor="#282828" />
+    <path
+        android:pathData="M576.8 243.6l-0.2 0c-4.5 0 -8.3 -3.7 -8.3 -8.3 0 -4.6 3.7 -8.3 8.3 -8.3l0.2 0c4.5 0 8.3 3.7 8.3 8.3 0 4.6 -3.8 8.3 -8.3 8.3zm-0.2 -16c-4.3 0 -7.8 3.5 -7.8 7.8 0 4.3 3.5 7.8 7.8 7.8l0.2 0c4.3 0 7.8 -3.5 7.8 -7.8 0 -4.3 -3.5 -7.8 -7.8 -7.8l-0.2 0z"
+        android:fillColor="#282828" />
+    <path
+        android:pathData="M512.8 243.3l40.8 0c4.4 0 8 -3.6 8 -8 0 -4.4 -3.6 -8 -8 -8l-40.8 0c-4.4 0 -8 3.6 -8 8 0 4.4 3.6 8 8 8l0 0zm0 0"
+        android:fillColor="#282828" />
+    <path
+        android:pathData="M553.6 243.6l-40.8 0c-4.5 0 -8.3 -3.7 -8.3 -8.3 0 -4.6 3.7 -8.3 8.3 -8.3l40.8 0c4.5 0 8.3 3.7 8.3 8.3 0 4.6 -3.7 8.3 -8.3 8.3zm-40.8 -16c-4.3 0 -7.8 3.5 -7.8 7.8 0 4.3 3.5 7.8 7.8 7.8l40.8 0c4.3 0 7.8 -3.5 7.8 -7.8 0 -4.3 -3.5 -7.8 -7.8 -7.8l-40.8 0z"
+        android:fillColor="#282828" />
+    <path
+        android:pathData="M641 524.9l-0.2 0c-4.4 0 -8 3.6 -8 8 0 4.4 3.6 8 8 8l0.2 0c4.4 0 8 -3.6 8 -8 0 -4.4 -3.6 -8 -8 -8l0 0zm0 0"
+        android:fillColor="#282828" />
+    <path
+        android:pathData="M641 541.2l-0.2 0c-4.5 0 -8.3 -3.7 -8.3 -8.3 0 -4.6 3.7 -8.3 8.3 -8.3l0.2 0c4.5 0 8.3 3.7 8.3 8.3 0 4.6 -3.8 8.3 -8.3 8.3zm-0.2 -16c-4.3 0 -7.8 3.5 -7.8 7.8 0 4.3 3.5 7.8 7.8 7.8l0.2 0c4.3 0 7.8 -3.5 7.8 -7.8 0 -4.3 -3.5 -7.8 -7.8 -7.8l-0.2 0z"
+        android:fillColor="#282828" />
+    <path
+        android:pathData="M704.8 524.9l-40.8 0c-4.4 0 -8 3.6 -8 8 0 4.4 3.6 8 8 8l40.8 0c4.4 0 8 -3.6 8 -8 0 -4.4 -3.6 -8 -8 -8l0 0zm0 0"
+        android:fillColor="#282828" />
+    <path
+        android:pathData="M704.8 541.2l-40.8 0c-4.5 0 -8.3 -3.7 -8.3 -8.3 0 -4.6 3.7 -8.3 8.3 -8.3l40.8 0c4.5 0 8.3 3.7 8.3 8.3 0 4.6 -3.8 8.3 -8.3 8.3zm-40.8 -16c-4.3 0 -7.8 3.5 -7.8 7.8 0 4.3 3.5 7.8 7.8 7.8l40.8 0c4.3 0 7.8 -3.5 7.8 -7.8 0 -4.3 -3.5 -7.8 -7.8 -7.8l-40.8 0z"
+        android:fillColor="#282828" />
 </vector>
