--- a/app/src/main/res/layout/fragment_your_trips.xml
+++ b/app/src/main/res/layout/fragment_your_trips.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="4dp"
-    android:background="@color/background"
+    android:background="#f7f7f7"
     android:orientation="vertical">
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_trips_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:paddingTop="16dp">
 
     </android.support.v7.widget.RecyclerView>
 
