--- a/app/src/main/res/layout/my_trips_model.xml
+++ b/app/src/main/res/layout/my_trips_model.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="4dp"
-    app:cardCornerRadius="16dp"
-    android:elevation="20dp"
-    android:layout_marginTop="4dp">
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
+    android:layout_marginBottom="16dp"
+    android:background="#FFFFFF"
+    app:cardElevation="20dp"
+    app:cardCornerRadius="16dp">
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/frame"
         android:layout_width="match_parent"
-        android:layout_height="210dp"
-        android:background="#ffffff">
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/bg_trip"
@@ -21,106 +24,104 @@
             android:scaleType="centerCrop"
             android:src="@drawable/bg_test" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:background="@drawable/bg_shadow_gradient" />
-
-        <TextView
-            android:id="@+id/tour_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="75dp"
-            android:layout_marginStart="8dp"
-            android:text="Dhaka - Bandarbans"
-            android:textColor="#ffffff"
-            android:textSize="24sp" />
-
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:layout_margin="8dp">
-
-
-            <TextView
-                android:id="@+id/tour_date_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Date: "
-                android:textSize="13dp"
-                android:textColor="#757575"
-                />
-
+            android:layout_marginStart="16dp">
 
             <TextView
-                android:id="@+id/tour_date"
+                android:id="@+id/tour_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/tour_date_txt"
-                android:text="9/10/2017"
-                android:textColor="#757575"
-                android:textSize="13sp" />
+                android:layout_gravity="top"
+                android:text="Journey to the sea"
+                android:layout_marginTop="4dp"
+                android:textColor="#2c2c2c"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/tour_route"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tour_name"
+                android:layout_marginTop="6dp"
+                android:text="from DHAKA to COX'S BAZAAR"
+                android:textColor="#dbdbdb"
+                android:textSize="10sp" />
+
+            <TextView
+                android:id="@+id/tour_avg_expense"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tour_route"
+                android:layout_marginTop="2dp"
+                android:text="Avg. expense per person: "
+                android:textColor="#dbdbdb"
+                android:layout_marginBottom="8dp"
+                android:textSize="10sp" />
+
 
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:id="@+id/date_lin"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                android:layout_below="@+id/tour_date"
+                android:layout_alignParentRight="true"
+                android:layout_alignTop="@+id/tour_route"
+                android:layout_marginEnd="8dp"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/ic_total_member"
+                    android:id="@+id/tour_date_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="Team Size: "
-                    android:textSize="13dp"
-                    android:textColor="#757575"/>
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@+id/tour_name"
+                    android:text="Date: "
+                    android:textColor="#dbdbdb"
+                    android:textSize="10sp" />
+
 
                 <TextView
-                    android:id="@+id/trip_total_member"
+                    android:id="@+id/tour_date_start"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="4dp"
-                    android:text="7"
-                    android:textSize="13dp"
-                    android:textColor="#757575"
-                     />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@+id/tour_name"
+                    android:text="9/11/2017 - "
+                    android:textColor="#dbdbdb"
+                    android:textSize="10sp" />
 
                 <TextView
-                    android:id="@+id/ic_expense_per_head"
+                    android:id="@+id/tour_date_end"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="Avg. expense: "
-                    android:textSize="13dp"
-                    android:textColor="#757575"
-                    />
-
-                <TextView
-                    android:id="@+id/trip_expense_per_head"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="$400"
-                    android:textColor="#757575"
-                    android:textSize="13dp" />
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@+id/tour_name"
+                    android:text="15/11/2017"
+                    android:textColor="#dbdbdb"
+                    android:textSize="10sp" />
 
 
             </LinearLayout>
 
+
+            <TextView
+                android:id="@+id/tour_team_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/date_lin"
+                android:layout_below="@+id/date_lin"
+                android:text="Team size : 4"
+                android:textColor="#dbdbdb"
+                android:textSize="10sp" />
+
+
         </RelativeLayout>
-    </FrameLayout>
+
+
+    </LinearLayout>
 
 
 </android.support.v7.widget.CardView>
