--- a/app/src/main/res/layout/cardview_current_trip.xml
+++ b/app/src/main/res/layout/cardview_current_trip.xml
@@ -98,9 +98,8 @@
 
             <ImageView
                 android:id="@+id/weather_icon"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:padding="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/ic_weather" />
 
             <TextView
