--- a/app/src/main/res/layout/fragment_current_trip.xml
+++ b/app/src/main/res/layout/fragment_current_trip.xml
@@ -10,13 +10,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="18dp"
+            android:layout_margin="16dp"
             app:cardCornerRadius="4dp">
 
             <RelativeLayout
@@ -135,12 +135,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="-8dp"
+
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -148,11 +150,12 @@
                     android:id="@+id/cam_current"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/foreground_camera"
+                    android:background="@drawable/forground_camera"
                     android:drawableTop="@drawable/btn_camera"
                     android:paddingEnd="16dp"
                     android:gravity="center"
                     android:paddingStart="16dp"
+                    android:layout_marginBottom="-8dp"
                     android:paddingTop="20dp"
                     android:drawablePadding="-50dp"
                     android:text="Camera" />
@@ -161,10 +164,10 @@
                     android:id="@+id/nav_restaurants"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
                     android:background="@drawable/foreground_restaurants"
                     android:drawableTop="@drawable/ic_restaurants"
                     android:paddingEnd="16dp"
+                    android:layout_marginBottom="-8dp"
                     android:gravity="center"
                     android:paddingStart="16dp"
                     android:paddingTop="20dp"
@@ -175,8 +178,8 @@
                     android:id="@+id/nav_fuel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
                     android:background="@drawable/forground_gas"
+                    android:layout_marginBottom="-8dp"
                     android:paddingEnd="16dp"
                     android:drawableTop="@drawable/ic_gas_pumps"
                     android:gravity="center"
@@ -189,7 +192,8 @@
                     android:id="@+id/nav_police"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
+                    android:layout_marginBottom="-8dp"
+
                     android:background="@drawable/forground_police"
                     android:drawableTop="@drawable/ic_police_station"
                     android:paddingEnd="16dp"
@@ -205,7 +209,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="4dp"
-                    android:layout_marginStart="4dp"
                     android:layout_marginTop="32dp"
                     android:background="@drawable/forground_my_expense"
                     android:drawableTop="@drawable/ic_my_expense"
@@ -231,10 +234,12 @@
                     android:id="@+id/nav_hospitals"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/foreground_hospital"
+                    android:background="@drawable/forground_hospital"
                     android:drawableTop="@drawable/ic_hospitals"
                     android:paddingEnd="16dp"
                     android:gravity="center"
+                    android:layout_marginBottom="-8dp"
+
                     android:paddingStart="16dp"
                     android:paddingTop="20dp"
                     android:drawablePadding="-50dp"
@@ -244,7 +249,7 @@
                     android:id="@+id/nav_hotels"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
+                    android:layout_marginBottom="-8dp"
                     android:background="@drawable/forground_hotels"
                     android:paddingEnd="16dp"
                     android:gravity="center"
@@ -259,7 +264,7 @@
                     android:id="@+id/nav_spots"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
+                    android:layout_marginBottom="-8dp"
                     android:background="@drawable/forground_tourists"
                     android:drawableTop="@drawable/ic_tourist_spots"
                     android:paddingEnd="16dp"
@@ -273,7 +278,7 @@
                     android:id="@+id/nav_maps"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
+                    android:layout_marginBottom="-8dp"
                     android:background="@drawable/forground_maps"
                     android:drawableTop="@drawable/ic_maps"
                     android:paddingEnd="16dp"
@@ -288,7 +293,6 @@
                     android:id="@+id/team_expense_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="4dp"
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="32dp"
                     android:background="@drawable/forground_team_expense"
