--- a/app/src/main/res/layout/my_expense_model.xml
+++ b/app/src/main/res/layout/my_expense_model.xml
@@ -2,26 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
     android:orientation="horizontal">
 
 
     <EditText
         android:id="@+id/usedON"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
         android:hint="Used on"
+        android:ems="5"
+        android:gravity="center"
         android:textSize="16sp"/>
 
 
 
     <EditText
         android:id="@+id/cost"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:hint="Cost"
-        android:layout_marginStart="32dp"
-        android:textSize="16sp"/>
+        android:ems="5"
+        android:inputType="number|numberDecimal"
+        android:layout_marginStart="16dp"
+        android:textSize="16sp"
+        android:gravity="center"
+        />
 
 
 </LinearLayout>
