--- a/app/src/main/res/layout/my_trips_model.xml
+++ b/app/src/main/res/layout/my_trips_model.xml
@@ -47,7 +47,7 @@
                 android:layout_below="@+id/tour_name"
                 android:layout_marginTop="6dp"
                 android:text="from DHAKA to COX'S BAZAAR"
-                android:textColor="#dbdbdb"
+                android:textColor="@color/font_normal"
                 android:textSize="10sp" />
 
             <TextView
@@ -57,8 +57,7 @@
                 android:layout_below="@+id/tour_route"
                 android:layout_marginTop="2dp"
                 android:text="Avg. expense per person: "
-                android:textColor="#dbdbdb"
-                android:layout_marginBottom="8dp"
+                android:textColor="@color/font_normal"
                 android:textSize="10sp" />
 
 
@@ -67,9 +66,8 @@
                 android:id="@+id/date_lin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_alignTop="@+id/tour_route"
                 android:layout_marginEnd="8dp"
+                android:layout_below="@+id/tour_avg_expense"
                 android:orientation="horizontal">
 
                 <TextView
@@ -79,7 +77,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignTop="@+id/tour_name"
                     android:text="Date: "
-                    android:textColor="#dbdbdb"
+                    android:textColor="@color/font_normal"
                     android:textSize="10sp" />
 
 
@@ -90,7 +88,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignTop="@+id/tour_name"
                     android:text="9/11/2017 - "
-                    android:textColor="#dbdbdb"
+                    android:textColor="@color/font_normal"
                     android:textSize="10sp" />
 
                 <TextView
@@ -100,7 +98,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignTop="@+id/tour_name"
                     android:text="15/11/2017"
-                    android:textColor="#dbdbdb"
+                    android:textColor="@color/font_normal"
                     android:textSize="10sp" />
 
 
@@ -114,7 +112,8 @@
                 android:layout_alignStart="@+id/date_lin"
                 android:layout_below="@+id/date_lin"
                 android:text="Team size : 4"
-                android:textColor="#dbdbdb"
+                android:textColor="@color/font_normal"
+                android:layout_marginBottom="8dp"
                 android:textSize="10sp" />
 
 
