--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#607d8b</color>
     <color name="background">#f7f7f7</color>
 
-    <color name="font_normal">#bdbdbd</color>
+    <color name="font_normal">#9e9e9e</color>
     <color name="font_title">#2c2c2c</color>
 </resources>
