--- a/app/src/main/res/layout/my_expense_model.xml
+++ b/app/src/main/res/layout/my_expense_model.xml
@@ -29,5 +29,12 @@
         android:gravity="center"
         />
 
+    <ImageView
+        android:id="@+id/remove_item_expense"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_dismiss_trip"
+        />
+
 
 </LinearLayout>
