--- a/app/src/main/res/drawable-xhdpi/btn_finish_trip.xml
+++ b/app/src/main/res/drawable-xhdpi/btn_finish_trip.xml
@@ -4,8 +4,8 @@
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="20dip" />
-            <stroke android:width="2dip" android:color="#00ffffff" />
-            <gradient android:angle="-90" android:startColor="#00ffffff" android:endColor="#00ffffff"  />
+            <stroke android:width="2dip" android:color="#eca674" />
+            <gradient android:angle="-90" android:startColor="#eca674" android:endColor="#eca674"  />
         </shape>
     </item>
 
@@ -13,7 +13,7 @@
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="20dip" />
-            <stroke android:width="2dip" android:color="#a7c7d7" />
+            <stroke android:width="2dip" android:color="#ec9455" />
             <solid android:color="#00ffffff"/>
         </shape>
 
@@ -23,8 +23,8 @@
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="20dip" />
-            <stroke android:width="2dip" android:color="#a7c7d7" />
-            <gradient android:angle="-90" android:startColor="#a7c7d7" android:endColor="#FF396B83" />
+            <stroke android:width="2dip" android:color="#ec9455" />
+            <gradient android:angle="-90" android:startColor="#ec9455" android:endColor="#ec9455" />
         </shape>
     </item>
 
