--- a/app/src/main/res/layout/fragment_current_trip.xml
+++ b/app/src/main/res/layout/fragment_current_trip.xml
@@ -12,124 +12,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="18dp"
-            android:layout_margin="16dp"
-            app:cardCornerRadius="4dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <com.timqi.sectorprogressview.ColorfulRingProgressView
-                    android:id="@+id/expense_progressbar"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_margin="16dp"
-                    app:bgColor="#e1e1e1"
-                    app:fgColorEnd="#455A64"
-                    app:fgColorStart="#90A4AE"
-                    app:percent="70"
-                    app:startAngle="0"
-                    app:strokeWidth="5dp" />
-
-                <TextView
-                    android:id="@+id/pcnt_expense"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="56dp"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/spent_card"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/pcnt_expense"
-                    android:layout_centerHorizontal="true"
-                    android:text="Spent"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="14sp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/expense_progressbar"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:orientation="horizontal">
-
-
-                    <ImageView
-                        android:id="@+id/current_location_icon"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:padding="4dp"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/ic_current_location" />
-
-                    <TextView
-                        android:id="@+id/current_location_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:text="Thanchi"
-                        android:textColor="@color/colorAccent" />
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1" />
-
-
-                    <ImageView
-                        android:id="@+id/temp_icon"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:padding="4dp"
-                        android:src="@drawable/ic_temparature" />
-
-                    <TextView
-                        android:id="@+id/temp_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:text="32°c"
-                        android:textColor="@color/colorAccent" />
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1" />
-
-
-                    <ImageView
-                        android:id="@+id/weather_icon"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:padding="4dp"
-                        android:src="@drawable/ic_weather" />
-
-                    <TextView
-                        android:id="@+id/weather_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:text="Cloudy"
-                        android:textColor="@color/colorAccent" />
-
-                </LinearLayout>
-
-
-            </RelativeLayout>
-
-
-        </android.support.v7.widget.CardView>
+       <include
+           layout="@layout/cardview_current_trip" />
 
 
         <LinearLayout
@@ -309,29 +193,24 @@
         </LinearLayout>
 
 
-        <Button
-            android:id="@+id/nav_dismiss"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/btn_dismiss"
-            android:drawableLeft="@drawable/ic_dismiss_trip"
-            android:paddingEnd="30dp"
-            android:paddingStart="30dp"
-            android:text="Dismiss" />
+
 
         <Button
             android:id="@+id/nav_finish"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="40dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/btn_finish_trip"
-            android:drawableLeft="@drawable/ic_end_trip"
-            android:paddingEnd="30dp"
-            android:paddingStart="30dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="center"
+            android:background="@drawable/btn_dismiss"
+            android:drawableLeft="@drawable/ic_end_trip_svg"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="60dp"
+            android:textSize="14sp"
+            android:textColor="#FFF"
+            android:paddingStart="90dp"
+            android:paddingEnd="120dp"
             android:text="End Trip" />
 
 
