--- a/app/src/main/res/layout/my_expense_dialog.xml
+++ b/app/src/main/res/layout/my_expense_dialog.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:nestedScrollingEnabled="true"
     android:background="@drawable/alert_dialog_bg"
     >
 
