--- a/app/src/main/res/layout/fragment_your_trips.xml
+++ b/app/src/main/res/layout/fragment_your_trips.xml
@@ -1,45 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f7f7f7"
     android:orientation="vertical">
 
 
-    <TextView
-        android:id="@+id/upcomingTXT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Upcoming Trips"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="20sp"/>
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/my_upcoming_trips_recyclerView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="16dp">
+        android:orientation="vertical">
 
-    </android.support.v7.widget.RecyclerView>
+        <TextView
+            android:id="@+id/upcomingTXT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Upcoming Trips"
+            android:layout_marginStart="16dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="20sp"/>
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/my_upcoming_trips_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp">
+
+        </android.support.v7.widget.RecyclerView>
 
 
 
-    <TextView
-        android:id="@+id/completedTXT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Completed Trips"
-        android:textColor="@color/colorPrimaryDark"
-        android:layout_marginTop="30dp"
-        android:textSize="20sp"/>
+        <TextView
+            android:id="@+id/completedTXT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Completed Trips"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="16dp"
+            android:textSize="20sp"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/my_trips_recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="16dp">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/my_trips_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="16dp">
 
-    </android.support.v7.widget.RecyclerView>
+        </android.support.v7.widget.RecyclerView>
 
-</LinearLayout>
+    </LinearLayout>
+
+
+
+</android.support.v4.widget.NestedScrollView>
